# userborn

./: CHANGELOG.md  LICENSE  README.md  flake.nix
.github/: renovate.json
.github/workflows/: ci.yml
nix/modules/: userborn.nix
nix/tests/: default.nix  userborn-immutable-users.nix  userborn-mutable-users.nix  userborn.nix
nix/tests/common/: userborn.nix
rust/userborn/: Cargo.toml
rust/userborn/src/: config.rs  fs.rs  group.rs  id.rs  main.rs  passwd.rs  password.rs  shadow.rs  state.rs  subid.rs
