[package]
name = "userborn"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
log = "0.4.26"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
env_logger = { version = "0.11.7", default-features = false }
xcrypt = "0.3.1"

[dev-dependencies]
indoc = "2.0.6"
expect-test = "1.5.1"

[profile.release]
opt-level = "s"
panic = "abort"
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
needless_raw_string_hashes = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
