[package]
name = "userborn"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
log = "0.4.29"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
env_logger = { version = "0.11.8", default-features = false }
xcrypt = "0.3.2"

[dev-dependencies]
indoc = "2.0.7"
expect-test = "1.5.1"

[profile.release]
opt-level = "s"
panic = "abort"
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
needless_raw_string_hashes = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
